--- a/css/style.easynfast.css
+++ b/css/style.easynfast.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     display: block;
     margin: 0 auto;
-    min-height: 361px;
+    min-height: 500px !important;
 }
 #header {
     padding-top: 100px;
@@ -195,17 +195,17 @@
     width: 250px;
 }
 .txt-name {
-    background-image: url("../images/theme/icon-name.png");
+    background-image: url("../images/theme/icon/icon-name.png");
     background-position: 10px center;
     background-repeat: no-repeat;
 }
 .txt-email {
-    background-image: url("../images/theme/icon-email.png");
+    background-image: url("../images/theme/icon/icon-email.png");
     background-position: 10px center;
     background-repeat: no-repeat;
 }
 .txt-services {
-    background-image: url("../images/theme/icon-services.png"), url("../images/theme/icon-services-arrow.png");
+    background-image: url("../images/theme/icon/icon-services.png"), url("../images/theme/icon/icon-services-arrow.png");
     background-position: 10px center, 270px center;
     background-repeat: no-repeat;
 }
@@ -217,7 +217,7 @@
     width: 301px;
 }
 .contact-info-holder.fright > ul {
-    background-image: url("../images/theme/contact-right-bg.png");
+    background-image: url("../images/theme/bg/bg-contact-right.png");
     background-repeat: no-repeat;
     font-size: 15px;
     height: 162px;
@@ -240,7 +240,7 @@
     top: 5px;
 }
 .message-box {
-    background-image: url("../images/theme/icon-message.png");
+    background-image: url("../images/theme/icon/icon-message.png");
     background-position: 10px 10px;
     background-repeat: no-repeat;
     border: medium none;
