--- a/style.css
+++ b/style.css
@@ -100,6 +100,23 @@ i {
 .dark-background {
     background-color: #2C2C2C;
 }
+.display-none {
+    display: none;
+}
+.dialog-not-implement {
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 25px;
+    bottom: 0;
+    height: 200px;
+    left: 0;
+    margin: auto;
+    padding: 30px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 300px;
+    z-index: 9997;
+}
 #social-floating {
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
