--- a/css/style.easynfast.css
+++ b/css/style.easynfast.css
@@ -351,12 +351,12 @@
     width: 90%;
 }
 .double-layer-wrapper {
-    background: none repeat scroll 0 0 #252525;
+    background: none repeat scroll 0 0 #C2C2C2;
     margin: 0 auto;
     width: 925px;
 }
 .double-layer-wrapper, .double-layer-wrapper > div:first-child {
-    border: 2px solid #1A1A1A;
+    border: 2px solid #C2C2C2;
     border-radius: 15px;
     overflow: visible;
     position: relative;
